@@ -33,7 +33,7 @@ const CONTAINS_R_ELASTIC_APM_NODE_START = /(-r\s+|--require\s*=?\s*).*elastic-ap
  *         import 'elastic-apm-node/start.js'
  *         import apm from 'elastic-apm-node'; apm.start()
  *    - "aws-lambda-layer": `NODE_OPTIONS` using Agent installed at /opt/nodejs/node_modules/elastic-apm-node
- *    - "k8s-attacher": `NODE_OPTIONS` using Agent installed at /elastic/apm/agent/elastic-apm-node
+ *    - "k8s-attach": `NODE_OPTIONS` using Agent, and `ELASTIC_APM_ACTIVATION_METHOD=K8S` in env
  *    - "env-attach": Fallback for any other usage of NODE_OPTIONS='-r elastic-apm-node/start'
  *    - "preload": For usage of `node -r elastic-apm-node/start` without `NODE_OPTIONS`.
  */
@@ -73,9 +73,10 @@ function agentActivationMethodFromStartStack (startStack, log) {
       // This path is defined by https://docs.aws.amazon.com/lambda/latest/dg/configuration-layers.html#configuration-layers-path
       // and created by "dev-utils/make-distribution.sh".
       return 'aws-lambda-layer'
-    } else if (topDir === '/elastic/apm/agent/elastic-apm-node') {
-      // https://github.com/elastic/apm-mutating-webhook/blob/v0.1.0/charts/apm-attacher/values.yaml#L37
-      return 'k8s-attacher'
+    } else if (process.env.ELASTIC_APM_ACTIVATION_METHOD === 'K8S') {
+      // This envvar will be set in versions of apm-mutating-webhook after v0.1.0.
+      // https://github.com/elastic/apm-mutating-webhook/blob/4faff6299dc689491d628c26503568b09f078cfa/charts/apm-attacher/values.yaml#L33-L38
+      return 'k8s-attach'
     } else if (process.env.NODE_OPTIONS &&
         CONTAINS_R_ELASTIC_APM_NODE_START.test(process.env.NODE_OPTIONS)) {
       return 'env-attach'
